Fix catlist bullet alignment

--- a/css/main.css
+++ b/css/main.css
@@ -67,9 +67,6 @@ header {
 	color: black;
 	text-decoration: none;
 }
-.menu-link {
-	display: block;
-}
 h2 {
 	padding-bottom: 15px;
 }
